# paper7_VLM

./: .gitignore  AGENTS.md  NOTICE  README.md  REBUILD_PROGRESS.md  REFACTOR_PROGRESS.md  env_test.py  plan.md  pyproject.toml
SEG_Multi-Source_Landslides/: ALGORITHM.md  README.md  pyproject.toml
SEG_Multi-Source_Landslides/configs/: qpsalm_full_qwen_cached_core.yaml  qpsalm_segdesc_small.yaml  qpsalm_small_qwen_cached_box_prior.yaml  qpsalm_small_qwen_cached_core.yaml  qpsalm_small_qwen_core.yaml  qpsalm_tiny_text_probe.yaml  qpsalm_v2_full.yaml  qpsalm_v2_small.yaml  qpsalm_v2_smoke.yaml
SEG_Multi-Source_Landslides/configs/ablations/: qpsalm_small_qwen_cached_box_prior.yaml
SEG_Multi-Source_Landslides/qpsalm_seg/: __init__.py  analysis_tables.py  config.py  controllers.py  data.py  demo_app.py  gallery.py  indexing.py  inference.py  losses.py  matching.py  metrics.py  model.py  paths.py  presentation.py  presets.py  qwen_cache.py  rendering.py  runtime.py  schema.py  thresholding.py  train_eval.py  visualize.py
SEG_Multi-Source_Landslides/qpsalm_seg/cli/: __init__.py  ablation_report.py  build_oof_folds.py  cache_description_vision_features.py  cache_index.py  cache_qwen_embeddings.py  cache_qwen_vision_features.py  cache_qwen_visual_evidence.py  check_env.py  check_qwen_cache.py  compare_description_runs.py  compare_runs.py  compare_segdesc_retention.py  curate_gallery.py  demo.py  demo_description.py  diagnose_run.py  eval.py  eval_ablation_suite.py  eval_description.py  eval_description_zero_shot.py  eval_segdesc_retention.py  export_predicted_regions.py  export_tables.py  inspect_data.py  integration_check.py  merge_oof_predictions.py  recommend_threshold.py  run_phase1.py  score_caption_human_review.py  score_caption_metrics.py  score_expert_factuality.py  segdesc.py  summarize_run.py  train.py  train_description.py  train_segdesc_joint.py  validate_d4_curriculum.py  validate_d_minus_one.py  validate_m4_region_encoder_suite.py  (+2 more)
SEG_Multi-Source_Landslides/qpsalm_seg/data/: __init__.py  dataset.py  io.py  prompts.py  samplers.py  single_image.py  transforms.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/: __init__.py  backbone.py  caption_human_review.py  caption_metrics.py  checkpoint.py  common.py  comparison.py  config.py  counterfactuals.py  cycle_localization.py  d4_curriculum.py  d_minus_one.py  data.py  demo.py  evaluator.py  expert_factuality.py  joint_trainer.py  json_protocol.py  m6_acceptance.py  metrics.py  mgrr.py  model.py  oof.py  output_protocol.py  predicted_regions.py  region_baselines.py  retention.py  run_artifacts.py  runtime.py  target_audit.py  trainer.py  vision_cache.py  zero_shot.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/data/: __init__.py  artifact_readiness.py  cache_builder.py  cache_migration.py  datasets.py  engineering_contracts.py  expert_contracts.py  loaders.py  oof.py  predicted_checkpoint.py  predicted_contracts.py  predicted_export.py  predicted_regions.py  predicted_validation.py  records.py  sampling.py  source_binding.py  unified_artifact.py  vision_cache.py  vision_cache_bank.py  vision_cache_contracts.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/evaluation/: __init__.py  artifacts.py  caption_human_review.py  caption_metrics.py  comparison.py  contracts.py  counterfactual_gate.py  counterfactuals.py  cycle_localization.py  d4_curriculum.py  d_minus_one.py  d_minus_one_contracts.py  demo.py  expert_factuality.py  formal_inputs.py  m6_acceptance.py  metrics.py  publication.py  readiness_replay.py  retention.py  retention_aggregation.py  retention_build.py  retention_contracts.py  retention_inputs.py  retention_validation.py  retrieval.py  runner.py  targets.py  zero_shot.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/modeling/: __init__.py  backbone.py  mgrr.py  model.py  region_baselines.py  structured_generation.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/protocols/: __init__.py  cache.py  config.py  gates.py  io.py  launch.py  output.py  region_geometry.py  stages.py  versions.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/training/: __init__.py  checkpoint.py  checkpoint_contracts.py  engineering_gates.py  gradient_gates.py  joint_contracts.py  joint_lifecycle.py  joint_runtime.py  joint_trainer.py  run_artifacts.py  runtime.py  streams.py  trainer.py
SEG_Multi-Source_Landslides/qpsalm_seg/description/workflows/: __init__.py  artifact_readiness.py  cache_build.py  cache_migration.py  comparison.py  d0_acceptance.py  d0_preflight.py  d_minus_one.py  demo.py  evaluate.py  gates.py  joint_train.py  oof.py  retention.py  review.py  train.py  zero_shot.py
SEG_Multi-Source_Landslides/qpsalm_seg/engine/: __init__.py  checkpoint.py  common.py  diagnostics.py  evaluator.py  optimizer.py  threshold.py  trainer.py
SEG_Multi-Source_Landslides/qpsalm_seg/models/: __init__.py  common.py  decoder.py  fusion.py  modality.py  pmrd.py  qmef.py  qpsalm.py  qwen_vision_encoder.py  sane.py  vision_cache.py  visual_evidence.py
SEG_Multi-Source_Landslides/scripts/: run_qpsalm_experiment.sh  run_qpsalm_smoke.sh  run_qwen_phase1_full.sh  run_qwen_phase1_smoke.sh  run_qwen_verifier_ablation.sh
SEG_Multi-Source_Landslides/tests/: test_benchmark_v2.py  test_description_benchmark.py  test_inference_gallery.py  test_landslide_bridge.py  test_refactor_core.py  test_renderer.py  test_segdesc_architecture.py  test_segdesc_protocol.py  test_segdesc_unified_index.py  test_v2_integration.py
configs/: benchmark_v3_full.yaml  benchmark_v3_small.yaml  benchmark_v4_small.yaml  description_ontology_v1.yaml  landslide_bridge_v1.yaml  model_sami.yaml  qpsalm_description_output_v1.schema.json  qpsalm_description_record_v2.schema.json  qpsalm_landslide_region_description_v1.schema.json  scene_region_ontology_v2.yaml
docs/: CODEX_REFACTOR_PROMPT.md  OA-GroundRAG_算法构建方案.md  REFACTOR_TASK_SPEC.md  Task_Introduction.md  benchmark_GAR.md  geohazard_benchmark.md  opt_refactor_algo.md  光学锚定任意辅助模态滑坡分割与VLM区域理解_算法构建方案.md
schemas/: benchmark_manifest_v4.schema.json  benchmark_statistics_v4.schema.json  (+10 more)
(+175 files in other folders)
