[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oa-auxseg-vlm"
version = "0.1.0"
description = "Optical-anchored arbitrary-auxiliary landslide segmentation and mask-grounded VLM research."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = []
